# tomo_preprocessing

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
test_data/ctffind/: relion_ctf_estimation_output.star
test_data/import/: tilt_series.star
test_data/import/tilt_series/: my_prefix_TS_01.star
test_data/motion_correction/: example_relion_motioncor_output.star  relion_motion_correction_output.star
tests/: conftest.py  example_aretomo_command.sh  test_import.py  test_matrix_generation.py  test_motion_correction.py
tomography_preprocessing/: _version.py  align_tilt_series.py  ctf_estimation.py  import_tilt_series.py  motion_correction.py  utils.py
tomography_preprocessing/denoising/: __init__.py  _cli.py
tomography_preprocessing/denoising/care4relion/: __init__.py  _utils.py  care4relion.py  constants.py  train_neural_network.py
tomography_preprocessing/denoising/cryoCARE/: __init__.py  _utils.py  constants.py  cryoCARE.py  cryoCARE_predict.py  cryoCARE_train.py  train_neural_network.py
tomography_preprocessing/import/: __init__.py  cli.py  serialem.py  stub_alternative.py
tomography_preprocessing/import_tilt_series/: serialem.py  stub_alternative.py
tomography_preprocessing/tilt_series_alignment/: __init__.py  _cli.py  _generate_matrices.py  _imod_base.py  _job_utils.py  aretomo.py  imod_etomo_launcher.py  imod_fiducials.py  imod_generate_matrices.py  imod_patch_tracking.py
tomography_preprocessing/tilt_series_alignment/aretomo/: _utils.py  align_tilt_series.py  alignment.py  batch.py
tomography_preprocessing/tilt_series_alignment/imod/: __init__.py  _utils.py  align_tilt_series.py  alignment.py  batch_fiducials.py  batch_patch_tracking.py  generate_matrices.py
tomography_preprocessing/train_denoiser/: __init__.py  _cli.py  care4relion.py  split_tomograms.py
tomography_preprocessing/train_denoiser/split_tilt_series/: __init__.py  _utils.py  split_tilt_series.py
tomography_preprocessing/train_denoiser/split_tomograms/: __init__.py  (+3 more)
tomography_preprocessing/utils/: __init__.py  aretomo.py  file.py  image.py  imod.py  io.py  mdoc.py  mrc.py  relion.py  star.py  transformations.py
(+2 files in other folders)
