
[metadata]
name = tomography_preprocessing
url = https://github.com/alisterburt/tomography_preprocessing
author = CCP-EM tomography hackathon participants
author_email = temp@temp.temp
description = package description.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/alisterburt/tomography_preprocessing

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    numpy
    pandas
    starfile
    mrcfile
    mdocfile
    yet-another-imod-wrapper
    typer
    rich
    einops

[options.extras_require]
testing =
    pytest
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    jupyter-book

[options.entry_points]
console_scripts =
    relion_tomo_import = tomography_preprocessing.import_tilt_series:cli
    relion_tomo_align_tilt_series = tomography_preprocessing.tilt_series_alignment:cli

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = tomography_preprocessing

[pydocstyle]
match_dir = tomography_preprocessing
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = tomography_preprocessing
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True


